# ict-backtest

./: .gitignore  CLAUDE.md  README.md  pw_check.cjs  start.bat
.claude/: settings.local.json
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/: backtest.py  candles.py  checklist.py  ingest.py  journal.py  macro.py  patterns.py  telegram.py  turtle.py  ws.py
backend/app/backtest/: engine.py  entry.py  journal.py  live_detector.py  metrics.py  mtf_entry.py  ob_entry.py  simulate.py  stop.py
backend/app/data/: binance.py  ingest.py  loader.py  ws_binance.py
backend/app/models/: candle.py  journal.py  macro.py  patterns.py  trade.py
backend/app/patterns/: amd.py  atr.py  bpr.py  config.py  detect_all.py  fvg.py  ifvg.py  killzone.py  liquidity.py  mss.py  ob.py  po3.py  swings.py
backend/app/services/: macro.py  telegram.py
backend/app/turtle/: indicators.py
backend/tests/: test_backtest.py  test_bpr.py  test_checklist.py  test_detect_all.py  test_fvg.py  test_journal.py  test_liquidity.py  test_mtf.py  test_pipeline.py  test_po3.py  test_swings.py  test_telegram.py
backend/tests/fixtures/: bear_fvg.csv  bull_fvg.csv  monotone_up.csv  swing_pyramid.csv  swing_valley.csv  zigzag.csv
docs/: 01_SPEC.md  02_PATTERNS.md  03_BACKTEST.md  04_DATA_MODEL.md  05_ROADMAP.md  MANUAL.md
frontend/: package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/backtest/: ChecklistPanel.tsx  MetricsPanel.tsx  RunComparison.tsx  (+2 more)
frontend/lib/: api.ts  chart-primitives.ts  types.ts  ws.ts
(+10 files in other folders)
